--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio website milestone 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>this is hesding</h1>
+    <h1>portfolio website milestone 1</h1>
+    <h2>My Name is MD saheb Ali </h2>
+    
+
 </body>
 </html>
