--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio website milestone 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>portfolio website milestone 1</h1>
-    <h2>My Name is MD saheb Ali </h2>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange">MD saheb</span> in the world</span></h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>I am start to learn webdevolopment.i am jumping the hard work form webdevolopment professional work and i
+                wiil stoped any tour jurny lick that...train.fly.etc and i am also hapyy to the webdevelopment world
+            </p>
+            <a class="link" target="blank"
+                href="https://web.programming-hero.com/web-4/video/web-4-4-5-put-container-side-by-side-image-size-link-button-style">Hire
+                Me</a>
+        </div>
+        <div class="half-width"><img src="images/my picmd saheb.png" alt="logo"></div>
+    </section>
+
+
 
 </body>
+
 </html>
