--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         <div class="half-width"><img src="images/my picmd saheb.png" alt="logo"></div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/f2a5762c-461f-4e6a-9b4a-e22b4049ed75.jpg" alt="logo">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>you are achive your goal. then you have to first set your dream and folow the right path.if you achiv
+                your goal so evry time anywhear trust your self respect.and do it hardwork....you are achive your goal.
+                then you have to first set your dream and folow the right path.if you achiv
+                your goal so evry time anywhear trust your self respect.and do it hardwork</h2>
+            <a class="link" target="_blank"
+                href="https://web.programming-hero.com/web-4/video/web-4-4-6-dream-area-background-image-background-repeat">DOWNLODE
+                RESUME</a>
+        </div>
+    </section>
+
 
 
 </body>
