--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="half-width"><img src="images/my picmd saheb.png" alt="logo"></div>
     </section>
 
-    <section class="dream-big">
+    <section class="
+    ">
         <div class="half-width">
             <img src="images/f2a5762c-461f-4e6a-9b4a-e22b4049ed75.jpg" alt="logo">
         </div>
