--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange">MD saheb</span> in the world</span></h1>
@@ -28,25 +28,43 @@
         <div class="half-width"><img src="images/my picmd saheb.png" alt="logo"></div>
     </section>
 
-    <section class="
-    ">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/f2a5762c-461f-4e6a-9b4a-e22b4049ed75.jpg" alt="logo">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h2>you are achive your goal. then you have to first set your dream and folow the right path.if you achiv
+            <hp>you are achive your goal. then you have to first set your dream and folow the right path.if you achiv
                 your goal so evry time anywhear trust your self respect.and do it hardwork....you are achive your goal.
                 then you have to first set your dream and folow the right path.if you achiv
-                your goal so evry time anywhear trust your self respect.and do it hardwork</h2>
-            <a class="link" target="_blank"
-                href="https://web.programming-hero.com/web-4/video/web-4-4-6-dream-area-background-image-background-repeat">DOWNLODE
-                RESUME</a>
+                your goal so evry time anywhear trust your self respect.and do it hardwork</p>
+                <a class="link" target="_blank"
+                    href="https://web.programming-hero.com/web-4/video/web-4-4-6-dream-area-background-image-background-repeat">DOWNLODE
+                    RESUME</a>
         </div>
     </section>
-
-
-
+    <section class="experienc-area">
+        <h1>Experiens</h1>
+        <div class="flexible-container">
+            <div id="md-ali" class="experience-item">
+                <h2>Full Stack Webdevolopment</h2>
+                <h3 class="orange">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="md-saheb" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange">2021-2023 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+    </section>
+    <footer>
+        <p>© Shipon Roy 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
