--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </section>
     <section class="experienc-area">
-        <h1>Experiens</h1>
+        <h1 id="experience">Experience</h1>
         <div class="flexible-container">
             <div id="md-ali" class="experience-item">
                 <h2>Full Stack Webdevolopment</h2>
@@ -63,7 +63,7 @@
             </div>
     </section>
     <footer>
-        <p>© Shipon Roy 2021, a Programming Hero initiative.</p>
+        <p>© MD SAHEB 2021, a Programming Hero initiative.</p>
     </footer>
 </body>
 
